# declconf

./: Cargo.toml  LICENSE  README.md
declconf/: Cargo.toml
declconf/src/: args.rs  error.rs  lib.rs  parse.rs
declconf_derive/: Cargo.toml
declconf_derive/src/: lib.rs
src/: lib.rs
test_suite/: Cargo.toml
test_suite/tests/: macro_test.rs
